styling first step inputs, fixing layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,8 @@ html {
 body {
   font-size: 1.6rem;
   font-family: var(--ff);
-  min-height: 100vh;
   background-color: var(--gray-300);
+  font-weight: 400;
 }
 img,
 svg {
